--- a/app/customerattribute/ui5.yaml
+++ b/app/customerattribute/ui5.yaml
@@ -15,6 +15,11 @@ server:
             - /resources
             - /test-resources
           url: https://sapui5.hana.ondemand.com
+        backend:
+          - path: /sap
+            url: http://devn1-https-isu:8443
+            client: "800"
+            destination: ISU
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
