--- a/app/customerattribute/webapp/manifest.json
+++ b/app/customerattribute/webapp/manifest.json
@@ -99,11 +99,10 @@
           "earlyRequests": true
         }
       },
-      "ISUModel": {
+      "ISUService": {
         "dataSource": "ISUService",
         "preload": true,
-        "settings": {         
-        }
+        "settings": {}
       }
     },
     "resources": {
@@ -130,6 +129,20 @@
           "target": [
             "TargetSearchCustomer"
           ]
+        },        
+        {
+          "name": "CustomerDetails",
+          "pattern": "CustomerDetails/{scope}",
+          "target": [
+            "TargetCustomerDetails"
+          ]
+        },
+        {
+          "name": "CustomerSpecials",
+          "pattern": "CustomerSpecials/{scope}",
+          "target": [
+            "TargetCustomerSpecials"
+          ]
         }
       ],
       "targets": {
@@ -139,8 +152,22 @@
           "clearControlAggregation": false,
           "viewId": "SearchCustomer",
           "viewName": "SearchCustomer"
+        },
+        "TargetCustomerDetails": {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "CustomerDetails",
+          "viewName": "CustomerDetails"
+        },
+        "TargetCustomerSpecials": {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "CustomerSpecials",
+          "viewName": "CustomerSpecials"
         }
-      }
+      }      
     },
     "rootView": {
       "viewName": "com.pso.customerattribute.view.App",
