--- a/mta.yaml
+++ b/mta.yaml
@@ -3,160 +3,158 @@ ID: psocustomerecord
 description: A simple CAP project.
 version: 1.0.0
 modules:
-  - name: psocustomerecord-srv
-    type: nodejs
-    path: gen/srv
-    requires:
-      - name: psocustomerecord-auth
-      - name: psocustomerecord-db
-      - name: psocustomerecord-destination-service
-      - name: psocustomerecord-connectivity
-    provides:
-      - name: srv-api
-        properties:
-          srv-url: ${default-url}
+- name: psocustomerecord-srv
+  type: nodejs
+  path: gen/srv
+  requires:
+  - name: psocustomerecord-auth
+  - name: psocustomerecord-db
+  - name: psocustomerecord-destination-service
+  - name: psocustomerecord-connectivity
+  provides:
+  - name: srv-api
+    properties:
+      srv-url: ${default-url}
+  parameters:
+    buildpack: nodejs_buildpack
+    readiness-health-check-http-endpoint: /health
+    readiness-health-check-type: http
+  build-parameters:
+    builder: npm
+- name: psocustomerecord-db-deployer
+  type: hdb
+  path: gen/db
+  requires:
+  - name: psocustomerecord-db
+  parameters:
+    buildpack: nodejs_buildpack
+- name: psocustomerecord-destination-content
+  type: com.sap.application.content
+  requires:
+  - name: psocustomerecord-destination-service
     parameters:
-      buildpack: nodejs_buildpack
-      readiness-health-check-http-endpoint: /health
-      readiness-health-check-type: http
-    build-parameters:
-      builder: npm
-  - name: psocustomerecord-db-deployer
-    type: hdb
-    path: gen/db
-    requires:
-      - name: psocustomerecord-db
+      content-target: true
+  - name: psocustomerecord_html_repo_host
     parameters:
-      buildpack: nodejs_buildpack
-  - name: psocustomerecord-destination-content
-    type: com.sap.application.content
-    requires:
-      - name: psocustomerecord-destination-service
-        parameters:
-          content-target: true
-      - name: psocustomerecord_html_repo_host
-        parameters:
-          service-key:
-            name: psocustomerecord_html_repo_host-key
-      - name: psocustomerecord-auth
-        parameters:
-          service-key:
-            name: psocustomerecord-auth-key
+      service-key:
+        name: psocustomerecord_html_repo_host-key
+  - name: psocustomerecord-auth
     parameters:
-      content:
+      service-key:
+        name: psocustomerecord-auth-key
+  parameters:
+    content:
+      instance:
+        destinations:
+        - Name: com_pso_customerecord_psocustomerecord_html_repo_host
+          ServiceInstanceName: psocustomerecord-html5-app-host-service
+          ServiceKeyName: psocustomerecord_html_repo_host-key
+          sap.cloud.service: com-pso-customerecord
+        - Authentication: OAuth2UserTokenExchange
+          Name: com_pso_customerecord_psocustomerecord_auth
+          ServiceInstanceName: psocustomerecord-auth
+          ServiceKeyName: psocustomerecord-auth-key
+          sap.cloud.service: com-pso-customerecord
+        existing_destinations_policy: ignore
+  build-parameters:
+    no-source: true
+- name: psocustomerecord-app-content
+  type: com.sap.application.content
+  path: .
+  requires:
+  - name: psocustomerecord_html_repo_host
+    parameters:
+      content-target: true
+  build-parameters:
+    build-result: resources
+    requires:
+    - artifacts:
+      - compsocustomerecord.zip
+      name: compsocustomerecord
+      target-path: resources/
+    - artifacts:
+      - compsocustomerattribute.zip
+      name: compsocustomerattribute
+      target-path: resources/    
+- name: compsocustomerecord
+  type: html5
+  path: app/customerecord
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
+- name: compsocustomerattribute
+  type: html5
+  path: app/customerattribute
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
+resources:
+- name: psocustomerecord-auth
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      tenant-mode: dedicated
+      xsappname: psocustomerecord-primaryserviceorg-${space}
+    path: ./xs-security.json
+    service: xsuaa
+    service-plan: application
+- name: psocustomerecord-db
+  type: com.sap.xs.hdi-container
+  parameters:
+    service: hana
+    service-plan: hdi-shared
+- name: psocustomerecord-destination-service
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      HTML5Runtime_enabled: true
+      init_data:
         instance:
           destinations:
-            - Name: com_pso_customerecord_psocustomerecord_html_repo_host
-              ServiceInstanceName: psocustomerecord-html5-app-host-service
-              ServiceKeyName: psocustomerecord_html_repo_host-key
-              sap.cloud.service: com-pso-customerecord
-            - Authentication: OAuth2UserTokenExchange
-              Name: com_pso_customerecord_psocustomerecord_auth
-              ServiceInstanceName: psocustomerecord-auth
-              ServiceKeyName: psocustomerecord-auth-key
-              sap.cloud.service: com-pso-customerecord
-          existing_destinations_policy: ignore
-    build-parameters:
-      no-source: true
-  - name: psocustomerecord-app-content
-    type: com.sap.application.content
-    path: .
-    requires:
-      - name: psocustomerecord_html_repo_host
-        parameters:
-          content-target: true
-    build-parameters:
-      build-result: resources
-      requires:
-        - artifacts:
-            - compsocustomerecord.zip
-          name: compsocustomerecord
-          target-path: resources/
-        - artifacts:
-            - compsocustomerattribute.zip
-          name: compsocustomerattribute
-          target-path: resources/
-  - name: compsocustomerecord
-    type: html5
-    path: app/customerecord
-    build-parameters:
-      build-result: dist
-      builder: custom
-      commands:
-        - npm install
-        - npm run build:cf
-      supported-platforms:
-        []
-  - name: compsocustomerattribute
-    type: html5
-    path: app/customerattribute
-    build-parameters:
-      build-result: dist
-      builder: custom
-      commands:
-        - npm install
-        - npm run build:cf
-      supported-platforms:
-        []
-resources:
-  - name: psocustomerecord-auth
-    type: org.cloudfoundry.managed-service
-    parameters:
-      config:
-        tenant-mode: dedicated
-        xsappname: psocustomerecord-primaryserviceorg-${space}
-      path: ./xs-security.json
-      service: xsuaa
-      service-plan: application
-  - name: psocustomerecord-db
-    type: com.sap.xs.hdi-container
-    parameters:
-      service: hana
-      service-plan: hdi-shared
-  - name: psocustomerecord-destination-service
-    type: org.cloudfoundry.managed-service
-    parameters:
-      config:
-        HTML5Runtime_enabled: true
-        init_data:
-          instance:
-            destinations:
-              - Authentication: NoAuthentication
-                Name: ui5
-                ProxyType: Internet
-                Type: HTTP
-                URL: https://ui5.sap.com
-              - Authentication: NoAuthentication
-                HTML5.DynamicDestination: true
-                HTML5.ForwardAuthToken: true
-                Name: psocustomerecord-srv-api
-                ProxyType: Internet
-                Type: HTTP
-                URL: ~{srv-api/srv-url}
-            existing_destinations_policy: update
-        version: 1.0.0
-      service: destination
-      service-name: psocustomerecord-destination-service
-      service-plan: lite
-    requires:
-      - name: srv-api
-  - name: psocustomerecord_html_repo_host
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: html5-apps-repo
-      service-name: psocustomerecord-html5-app-host-service
-      service-plan: app-host
-  - name: psocustomerecord-connectivity
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: connectivity
-      service-plan: lite
+          - Authentication: NoAuthentication
+            Name: ui5
+            ProxyType: Internet
+            Type: HTTP
+            URL: https://ui5.sap.com
+          - Authentication: NoAuthentication
+            HTML5.DynamicDestination: true
+            HTML5.ForwardAuthToken: true
+            Name: psocustomerecord-srv-api
+            ProxyType: Internet
+            Type: HTTP
+            URL: ~{srv-api/srv-url}
+          existing_destinations_policy: update
+      version: 1.0.0
+    service: destination
+    service-name: psocustomerecord-destination-service
+    service-plan: lite
+  requires:
+  - name: srv-api
+- name: psocustomerecord_html_repo_host
+  type: org.cloudfoundry.managed-service
+  parameters:
+    service: html5-apps-repo
+    service-name: psocustomerecord-html5-app-host-service
+    service-plan: app-host
+- name: psocustomerecord-connectivity
+  type: org.cloudfoundry.managed-service
+  parameters:
+    service: connectivity
+    service-plan: lite
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
 build-parameters:
   before-all:
-    - builder: custom
-      commands:
-        - npm ci
-        - npx cds build --production
+  - builder: custom
+    commands:
+    - npm ci
+    - npx cds build --production
