--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@sap-cloud-sdk/http-client": "^3.18.0",
     "@sap/cds": "^7",
     "@sap/cds-hana": "^2",
+    "@sap/hdi-deploy": "^5.2.1",
     "@sap/xsenv": "^5.2.0",
     "@sap/xssec": "^3",
     "express": "^4"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
-    "@sap/cds-dk": "^7",
+    "@sap/cds-dk": "^7.9.7",
     "@sap/eslint-plugin-cds": "^3",
     "@sap/ux-specification": "^1.120.17",
     "eslint": "^9",
