--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,4 @@
 {
-  "version": "0.2.0",
   "configurations": [
     {
       "name": "Attach to a Cloud Foundry Instance on Port 9229",
@@ -24,5 +23,7 @@
         "<node_internals>/**"
       ]
     }
-  ]
+  ],
+  "compounds": [],
+  "version": "0.2.0"
 }
