Customer Attributes Create

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "cds": {
     "requires": {
      "uaa": {
-        "kind": "mocked"
+        "kind": "dummy"
       },
       "db": "hana",
       "connectivity": true,
