--- a/app/customerattribute/xs-app.json
+++ b/app/customerattribute/xs-app.json
@@ -1,6 +1,7 @@
 {
   "welcomeFile": "/index.html",
   "authenticationMethod": "route",
+  "sessionTimeout":10,
   "routes": [
     {
       "source": "^/odata/(.*)$",
